Nova correção no CI do Frontend

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,5 @@ jobs:
         cache: 'npm'
     - working-directory: library_front
       run: | 
-        yarn --frozen-lockfile
+        yarn install
         yarn test
