--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [16.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -26,5 +26,5 @@ jobs:
         cache: 'npm'
     - working-directory: library_front
       run: | 
-        yarn install
-        yarn test
+        npm install
+        npm run test
